== 0.2.7 ?

* Add clean method to sphinx init script

== 0.2.6 2008-02-29

* Fix SSH connect debug when connecting to more than 1 server.
* Added monit restart (hup) recipe.
* Mysql setup task, showing sql. Setting to :db role only.
* Capistrano patch: execute_on_servers_without_capitate(options, &block) to rescue Capistrano::NoMatchingServersError, and ignore as non-fatal

== 0.2.5 2008-02-28

* Adding application configuration for mongrel cluster monit setup.
* Renaming recipes, using consistent names for namespaces.
* Capistrano patch: if missing role, ignore the task instead of throwing error.
* Capistranp patch: Showing debug statement on SSH connect.

== 0.2.4 2008-02-26

* Change prompt.password to take options
* Adding password retry and check_hash
* Fixing :shell option for build scripting
* Add readline-devel to ruby centos install dependency

== 0.2.3 2008-02-25

* Various task and recipe fixes.
* Taking sh -c default out of script, doesn't escape right

== 0.2.2 2008-02-24

* Fixes to setup tasks.
* Removing with_user on add_user task. 

== 0.2.1 2008-02-24

* Removing all my brain dead recipes.
* Added build options for install tasks.
* Updating documentation

== 0.1.9 2008-02-23

* Adding config_script to mongrel_cluster recipe
* Creating upload plugin that streams data

== 0.1.8 2008-02-22

* Fixing up documentation
* Creating recipe documentation recipe
* New website generation
* Moved some recipes around

== 0.1.7 2008-02-21

* Renamed to 'capitate'
* Moving centos specific recipes into separate namespace
* Plugin: script.make_install
* Documentation and explicitly fetching vars (for install tasks), showing useful error messages

== 0.1.4 2008-02-07

* Using capistrano's plugin architecture instead of hacking around

== 0.1.3 2008-02-06

* Fixing local recipes

== 0.1.2 2008-02-06

* Loading recipes from gem

== 0.1.1 2008-02-06

* Initial import