@@ -1,10 +1,3 @@
-#--
-# =============================================================================
-# Copyright (c) 2007, Gabriel Handford (gabrielh@gmail.com)
-# All rights reserved.
-# =============================================================================
-#++
-
 require 'erb'
 require 'yaml'
 
