@@ -38,7 +38,7 @@
 
     <div id="version" class="clickable box" onclick='document.location = "http://rubyforge.org/projects/capitate"; return false'>
       <p>Get Version</p>
-      <a href="http://rubyforge.org/projects/capitate" class="numbers">0.2.6</a>
+      <a href="http://rubyforge.org/projects/capitate" class="numbers">0.2.7</a>
     </div>
     
     <div id="recipes">
